test/integration/bad/missing_dist_suffix/completely_undefined1.stan
model {
  target += foo_lpdf(1);
}